# testX

./: .gitignore  AI自动化测试工具 功能设计与技术方案文档  AI自动化测试平台-技术实现方案.md  CLAUDE.md  pyproject.toml  使用流程.md
ai-test-platform/: .gitignore  IMPLEMENTATION_PLAN.md  docker-compose.yml  init.sql  pyproject.toml
ai-test-platform/android-device-farm/: __init__.py  adb_manager.py  appium_android.py  appium_server.py  device_pool.py
ai-test-platform/backend/: .env  .env.example  Dockerfile
ai-test-platform/backend/app/: __init__.py  main.py
ai-test-platform/backend/app/api/: deps.py
ai-test-platform/backend/app/core/: config.py  database.py  security.py
ai-test-platform/backend/app/models/: __init__.py  base.py  code_change.py  device.py  mobile_execution.py  project.py  project_member.py  report.py  requirement.py  requirement_version.py  test_case.py  test_code.py  test_code_history.py  test_plan.py  test_run.py  user.py
ai-test-platform/backend/app/schemas/: ai.py  code_change.py  mobile_execution.py  project.py  project_member.py  report.py  requirement.py  test_case.py  test_code.py  test_plan.py  test_run.py
ai-test-platform/backend/app/services/: ai_service.py  code_fix_service.py  code_gen_service.py  device_service.py  git_service.py  impact_service.py  mobile_executor.py  report_service.py  test_executor.py
ai-test-platform/backend/app/utils/: __init__.py  file_utils.py  json_utils.py  markdown.py  screenshot_utils.py
ai-test-platform/backend/app/workers/: __init__.py  ai_task.py  test_task.py
ai-test-platform/backend/scripts/: init_db.py  seed_data.py
ai-test-platform/backend/tests/: conftest.py  test_ai.py  test_auth.py  test_devices.py  test_executions.py  test_projects.py  test_requirements.py
ai-test-platform/frontend/: Dockerfile  package-lock.json  package.json
ai-test-platform/frontend/src/: App.tsx
ai-test-platform/frontend/src/components/: Charts.tsx  DeviceSelector.tsx  DiffViewer.tsx  ExecutionLog.css  ExecutionLog.tsx  Layout.tsx  MonacoEditor.tsx
ai-test-platform/frontend/src/hooks/: useAsyncRun.ts  usePermission.ts  useWebSocket.ts
ai-test-platform/frontend/src/pages/: Dashboard.tsx  Devices.tsx  Login.tsx  Projects.tsx  Reports.tsx  Requirements.tsx  TestCases.tsx  TestCode.tsx  TestPlans.tsx  TestRuns.tsx
ai-test-platform/frontend/src/services/: aiService.ts  api.ts  exportService.ts  index.ts
ai-test-platform/frontend/src/store/: executionStore.ts  index.ts  projectStore.ts  userStore.ts
ai-test-platform/frontend/src/types/: api.d.ts  index.ts  project.d.ts  test.d.ts
ai-test-platform/frontend/src/utils/: formatters.ts  (+1 more)
ai-test-platform/ios-device-farm/: __init__.py  appium_ios.py  appium_server.py  device_pool.py  xcrun_manager.py  xcrunner.py
ai-test-platform/sandbox/: device_controller.py
ai-test-platform/sandbox/docker/: Dockerfile  entrypoint.sh
ai-test-platform/sandbox/executor/: api_executor.py  run_api_test.py  run_mobile_test.py  run_unit_test.py  utils.py  web_executor.py
(+42 files in other folders)
